# robot

./: .gitignore  .ignore  README.md
ros指导手册/: CMakeLists.txt  ros命令手册.txt  ros手册(py).txt  ros配置手册.txt
ros指导手册/ros详细/: Ubuntu22.04.5ros配置.txt  git 推送 github.txt  git入门.txt  rqt.txt  rviz.txt  树莓派配置手册.txt
ros指导手册/ros详细/launch/: Cmake.txt  launch.txt  setup.txt  传参.txt
ros指导手册/ros详细/tf使用手册/: 动态转换.txt  命令行.txt
ros指导手册/ros详细/仿真/gazebo/: 安装gazebo.txt
ros指导手册/ros详细/仿真/ros2_control/: gazebo接入ros2_control.txt  ros2_control安装.txt
ros指导手册/ros详细/仿真/urdf/: gazebo创建地图.txt  rviz2.txt  urdf.txt  xacro.txt  创建机器人仿真.txt
ros指导手册/ros详细/参数通信/: 参数客户端.txt  参数自动设置.txt  参数设置.txt
ros指导手册/ros详细/导航/: navigation2安装.txt  安装slam.txt  构建第一章地图.txt
ros指导手册/ros详细/服务通信/: 客户端C++.txt  服务端C++.txt  自定义服务接口.txt
ros指导手册/实机/: 移动控制(手动).md
src/robot/: CMakeLists.txt  package.xml  robotConfig.cmake.in  robotConfigVersion.cmake.in
src/robot/src/: drive.cpp
实机问题整理/: 力矩.txt  圆周运动公式.txt  杠杆原理本质.txt  质心公式推导.txt  质心运动定理(力平移到质心公式原理).txt
